<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".TicTacToeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contenedorSuperior"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:id="@+id/jugadorUno"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/casilla"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/icono_x_triqui" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/jugador1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/jugadorDos"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="@drawable/casilla"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/icono_o_triqui" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/jugador2"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:layout_marginBottom="200dp"
        android:background="@drawable/tablero"
        android:layout_above="@+id/botonRepetir"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:weightSum="3">
            
            <ImageView
                android:id="@+id/casilla1"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:src="@drawable/trasparente"
                android:background="@drawable/casilla">

            </ImageView>

            <ImageView
                android:id="@+id/casilla2"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:src="@drawable/trasparente"
                android:background="@drawable/casilla">

            </ImageView>

            <ImageView
                android:id="@+id/casilla3"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:src="@drawable/trasparente"
                android:background="@drawable/casilla">

            </ImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/casilla4"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:src="@drawable/trasparente"
                android:background="@drawable/casilla">

            </ImageView>

            <ImageView
                android:id="@+id/casilla5"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:src="@drawable/trasparente"
                android:background="@drawable/casilla">

            </ImageView>

            <ImageView
                android:id="@+id/casilla6"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:src="@drawable/trasparente"
                android:background="@drawable/casilla">

            </ImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginBottom="10dp">


            <ImageView
                android:id="@+id/casilla7"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:src="@drawable/trasparente"
                android:background="@drawable/casilla">

            </ImageView>

            <ImageView
                android:id="@+id/casilla8"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:src="@drawable/trasparente"
                android:background="@drawable/casilla">

            </ImageView>

            <ImageView
                android:id="@+id/casilla9"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:src="@drawable/trasparente"
                android:background="@drawable/casilla">

            </ImageView>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/botonRepetir"
        android:text="@string/nuevoJuego"/>
</RelativeLayout>